fix(ui): add missing margin-bottom to form fields

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -504,6 +504,7 @@ mat-form-field.mat-form-field-should-float label {
 
 mat-form-field .mat-hint {
 	font-size: 12px;
+	margin-bottom: 16px;
 }
 
 .mat-button-focus-overlay {
